--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
+vendor/bundle/
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -15,3 +16,4 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+.DS_Store
